--- a/UIStudentAppProject/CreateStudent/createstudent.html
+++ b/UIStudentAppProject/CreateStudent/createstudent.html
@@ -11,7 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=PT+Serif:ital@1&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css"
+      rel="stylesheet"
+    />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
   </head>
   <body>
     <div>
