--- a/UIStudentAppProject/ViewStudent/viewstudent.html
+++ b/UIStudentAppProject/ViewStudent/viewstudent.html
@@ -15,7 +15,12 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Serif&family=PT+Serif:ital@1&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css"
+      rel="stylesheet"
+    />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
     <script src="../script.js" defer></script>
   </head>
   <body>
